...
    
    // MARK: - Life Cycle
    override func viewDidLoad() {
        super.viewDidLoad()
        
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"
        setUpBackButton()
        setUpProgressView()
        presenter?.viewDidLoad()
        if isDeletingCookie { clearWebViewCookies() }
                
        estimatedProgressObservation = webView.observe(
...
