...
                                <color key="backgroundColor" name="YP White"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="q9h-YI-eC2"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="YSDisplay-Bold" family="YS Display" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Войти">
                                            <attributes>
                                                <color key="NSColor" name="YP Black"/>
                                                <font key="NSFont" size="17" name="YSDisplay-Bold"/>
                                            </attributes>
...
